--- a/app/src/main/res/layout/frag_filesystem_edit.xml
+++ b/app/src/main/res/layout/frag_filesystem_edit.xml
@@ -48,7 +48,7 @@
             android:layout_height="wrap_content"
             android:padding="8dp"
             android:hint="@string/hint_password"
-            app:passwordToggleEnabled="false"
+            app:passwordToggleEnabled="true"
             app:layout_constraintTop_toBottomOf="@+id/text_input_layout_filesystem_username">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -65,7 +65,7 @@
             android:layout_height="wrap_content"
             android:padding="8dp"
             android:hint="@string/hint_vnc_password"
-            app:passwordToggleEnabled="false"
+            app:passwordToggleEnabled="true"
             app:layout_constraintTop_toBottomOf="@+id/text_input_layout_filesystem_password">
 
             <com.google.android.material.textfield.TextInputEditText
